src/tests/testfiles/binary-operator-types-17.txt
Error at 2:5: Binary operator operands must have the same type (have int rvalue and char[] rvalue)
54 * "a";
^
